# ML_DL_GenAI_all-project-learning

./: .gitignore  README.md
ML_api/: Dockerfile  main.py  pyproject.toml
Production_Ready/rag_production/: Dockerfile  README.md  pyproject.toml
Production_Ready/rag_production/documents/: vinayak.txt
Production_Ready/rag_production/src/: main.py
Production_Ready/rag_production/src/rag_components/: documents_loaders.py  embeddings.py  models.py  text_splitter.py  vector_store.py
